# scheduler

./: .clang-format  CMakeLists.txt  README.md
cmake/: Conan.cmake
source/: task.hpp
tests/: CMakeLists.txt  task.cpp  tests.cpp
